--- a/src/login/.gitignore
+++ b/src/login/.gitignore
@@ -3,3 +3,11 @@
 /Login.class
 /Login$3.class
 /Login$4.class
+/Login$5.class
+/Signup.class
+/SignUp$1.class
+/SignUp$2.class
+/SignUp$3.class
+/SignUp$4.class
+/SignUp$5.class
+/SignUp.class
