--- a/src/client/.gitignore
+++ b/src/client/.gitignore
@@ -29,3 +29,37 @@
 /MainGui$4.class
 /MainGui$5.class
 /MainGui.class
+/ChatFrame$1.class
+/ChatFrame$10.class
+/ChatFrame$11.class
+/ChatFrame$12.class
+/ChatFrame$13.class
+/ChatFrame$2.class
+/ChatFrame$3.class
+/ChatFrame$4.class
+/ChatFrame$5.class
+/ChatFrame$6.class
+/ChatFrame$7.class
+/ChatFrame$8.class
+/ChatFrame$9.class
+/ChatFrame.class
+/MainGui$6.class
+/MainGui$7.class
+/ChatRoomGUI$1.class
+/ChatRoomGUI$ChatRoom$1.class
+/ChatRoomGUI$ChatRoom$2.class
+/ChatRoomGUI$ChatRoom$3.class
+/ChatRoomGUI$ChatRoom.class
+/ChatRoomGUI.class
+/ChatRoomGUI$2.class
+/ChatRoomGUI$3.class
+/ChatRoomGUI$4.class
+/ChatRoomGUI$5.class
+/ChatRoomGUI$6.class
+/ChatRoomGUI$7.class
+/ChatGroupClients$MessagesThread.class
+/ChatGroupClients.class
+/ChatServer$1.class
+/ChatServer$HandleClient.class
+/ChatServer.class
+/ChatRoomGUI$MessagesThread.class
