nam update complete chat room 4/11/19

--- a/src/client/.gitignore
+++ b/src/client/.gitignore
@@ -63,3 +63,6 @@
 /ChatServer$HandleClient.class
 /ChatServer.class
 /ChatRoomGUI$MessagesThread.class
+/MainGui$8.class
+/MainGui$10.class
+/MainGui$9.class
